--- a/release/kubernetes-manifests.yaml
+++ b/release/kubernetes-manifests.yaml
@@ -860,4 +860,39 @@ spec:
   - name: grpc
     port: 9555
     targetPort: 9555
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: counter
+  labels:
+    app: counter
+spec:
+  selector:
+    matchLabels:
+      app: counter
+  template:
+    metadata:
+      labels:
+        app: counter
+    spec:
+      containers:
+        - name: counter
+          image: counter
+          ports:
+            - containerPort: 8081
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: counter
+  labels:
+    app: counter
+spec:
+  type: ClusterIP
+  selector:
+    app: counter
+  ports:
+    - port: 8081
+      targetPort: 8081
 # [END gke_release_kubernetes_manifests_microservices_demo]
