feat: add microservice 2

--- a/release/kubernetes-manifests.yaml
+++ b/release/kubernetes-manifests.yaml
@@ -878,7 +878,7 @@ spec:
     spec:
       containers:
         - name: counter
-          image: counter
+          image: damiangrygierczyk/microservice-test:latest
           ports:
             - containerPort: 8081
 ---
